<resources>
    <string name="app_name">ListPlix</string>

    <!-- Start -->
    <string-array name="role">
        <item>Senior</item>
        <item>Junior</item>
        <item>Interne</item>
        <item>Other</item>
    </string-array>
    <string-array name="department">
        <item>Management</item>
        <item>Mobile App Dev</item>
        <item>Game Dev</item>
        <item>Web Dev</item>
        <item>UI/UX</item>
        <item>Other</item>
    </string-array>
    <!--  End  -->


    <string name="error_email">[\"The email has already been taken.\"]</string>
    <string name="forget_password">Forget Password</string>
    <string name="forget_password_detail">Provide your account\'s email for which you want to reset your password!</string>
    <string name="otp">Enter one time password which sent on your email</string>
    <string name="new_credentials">New\nCredentials</string>
    <string name="new_credentials_slogan">Your identity has been verified!\nSet your new password</string>
    <string name="project_not_found">\"Project not found.\"</string>

    <string name="didn_t_recieve_code">Didn\'t Receive Code?</string>
    <string name="verify">Verify</string>
    <string name="your_otp_here">Your OTP Here...</string>
    <string name="resent_code">Resend Code</string>
    <string name="verify_and_create_account">Verify and Create Account</string>


    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Projemanag’s Minimalist Interface.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>

    <string name="sign_up_description_text">Enter your\'s detail, to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="cnf_password">Confirm Password</string>
    <string name="email">Email</string>

    <string name="sign_in_description_text">Enter your name, email id and password, to register with us.</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile">My Profile</string>

    <string name="create_board_title">Create Board</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>

    <string name="no_boards_are_available">No Boards are available!!!</string>

    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>

    <string name="members">Members</string>

    <string name="add_member">Add Member</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="search_member">Search Member</string>

    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>

    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="delete_card">Delete Card</string>

    <string name="alert">Alert</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete card \'%1$s\'?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="str_select_label_color">Select Label Color</string>

    <string name="str_select_member">Select Member</string>


    <string name="default_notification_channel_id">projemanag_notification_channel_id</string>
    <string name="verify_code">Verify Code</string>
    <string name="login">login</string>
</resources>