<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".activities.forgetpassword.ForgetPasswordSetCredentialActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/forget_password_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/update_new_password_icon"
            app:tint="@color/purple_700" />

        <TextView
            android:id="@+id/forget_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/google_sans_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/new_credentials"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/purple_700"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forget_password_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/google_sans_regular"
            android:gravity="center"
            android:text="@string/new_credentials_slogan"
            android:textAlignment="center"
            android:textColor="@color/purple_200"
            android:textSize="16sp"
            android:textStyle="italic" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/purple_200"
                app:placeholderText="Enter Password">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_cnf_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_password"
                android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/purple_200"
                app:placeholderText="Enter Password">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_cnf_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cnf_password"
                    android:inputType="textPassword"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_cnf_password"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_button_rounded"
                android:text="@string/update"
                android:textColor="@color/white" />


        </RelativeLayout>
    </LinearLayout>

</ScrollView>